# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/precompiled_header.gni")

precompiled_header("hello_pch") {
  precompiled_header = "./source/precompile.h"
  precompiled_source = "//source/precompile.cc"
}

executable("hello") {
  sources = [
    "//source/hello.cc",
  ]

  configs += [ ":hello_pch" ]

  deps = [
    ":hello_shared",
    ":hello_static",
  ]
}

shared_library("hello_shared") {
  sources = [
    "//source/hello_shared.cc",
    "//source/hello_shared.h",
  ]

  defines = [ "HELLO_SHARED_IMPLEMENTATION" ]
}

static_library("hello_static") {
  sources = [
    "//source/hello_static.cc",
    "//source/hello_static.h",
  ]
}
